HelloUltraviolet/Fixtures/RejectedSource/Expressions/YieldFromOutsideAsync/Expected.uv
//! Expected diagnostic metadata for the YieldFromOutsideAsync rejected-source specimen.

expectedDiagnostic("E-CON-0220", "rule.21.YieldFrom-NotAsync-Err")
